Added Charts and company support, request validations
